syntax = "proto3";

package transaction;

import "app/protos/types/transaction.proto";

message CreateProductTransactionRequest {
    int32 seller_account = 1;
    int32 customer_account = 2;
    string product = 3;
    int32 count = 4;
    int32 amount = 5;
}

message CreateMoneyTransactionRequest {
    int32 seller_account = 1;
    int32 customer_account = 2;
    int32 amount = 3;
}

message CreateTransactionResponse {
    types.TransactionStatusReason status = 1;
}